--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chalk": "^2.4.1",
     "debug": "^4.1.0",
     "express": "^4.16.3",
+    "file-system": "^2.2.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
