--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Finder API written in Node",
   "main": "server.js",
   "scripts": {
-    "start": "DEBUG=app nodemon server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,7 +12,6 @@
   "dependencies": {
     "debug": "^4.1.0",
     "express": "^4.16.3",
-    "file-system": "^2.2.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
